fixed ui getting pushed on mobile

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -140,27 +140,18 @@
     flex-direction: column;
     padding-top: 2rem;
     margin-top: 3rem;
+    overflow: overlay;
 
     padding: 0rem 1rem 1rem 1rem;
     width: 100%;
   }
 
-  .div-sidebar {
-    display: flex;
-    width: 100%;
-    padding: 0;
-    overflow: initial;
-  }
-
-  .div-panels {
+  .div-sidebar, .div-panels {
+    display: block;
     margin: 0;
     padding: 0;
-    overflow: initial;
-    flex: 1 1;
-  }
-
-  .div-top-artists, .div-top-tracks, .div-recent, .div-tuner, .div-scope, .div-info {
-    padding-left: 0;
+    width: 100%;
+    flex: none;
   }
 
   .div-sidebar .panel{
